--- a/71-css-网格布局案例1.html
+++ b/71-css-网格布局案例1.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>网格布局</title>
+    <title>网格布局案例1</title>
 
     <style>
         .box {
