--- a/68-css-逐帧动画.html
+++ b/68-css-逐帧动画.html
@@ -16,7 +16,7 @@
             background-size: contain;
             margin: 20px auto;
             animation: action 1s step-end infinite;
-            animation-timing-function: s;
+            /* animation-timing-function: step-end; */
         }
 
         @keyframes action {
